[package]
name = "acs"
version = "0.5.0"
edition = "2021"
authors = ["Antonio Caggiano <info@antoniocaggiano.eu>"]
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "acsim"
path = "src/sim/main.rs"
required-features = ["sim"]

[dependencies]
png = "0.17.6"

# Sim dependencies
sdl2 = { version = "0.35.2", optional = true }

[features]
sim = [ "sdl2" ]
