[package]
name = "acs"
version = "0.8.5"
edition = "2021"
authors = ["Antonio Caggiano <info@antoniocaggiano.eu>"]
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "acsim"
path = "src/sim/main.rs"
required-features = ["sim"]

[[test]]
name = "vm"
path = "tests/vm/mod.rs"

[[test]]
name = "cal"
path = "tests/cal/mod.rs"

[dependencies]
png = "0.17.6"

# Sim dependencies
sdl2 = { version = "0.35.2", optional = true }

# Web dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2.83" }

[features]
sim = [ "sdl2" ]
